# ChangeLog for sys-apps/calculate-templates
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*calculate-templates-2.2.19-r2 (22 Jul 2011)

  22 Jul 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-templates-2.2.19-r2.ebuild,
  +files/calculate-templates-2.2.19_scandelay.patch:
  Add scandelay

*calculate-templates-2.2.19-r1 (20 Jul 2011)

  20 Jul 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-templates-2.2.19-r1.ebuild,
  +files/calculate-templates-2.2.19_2.2.20_rc1.patch:
  Update to 2.2.20_rc1

*calculate-templates-2.2.19 (18 Jul 2011)

  18 Jul 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-templates-2.2.19.ebuild:
  Bump version

*calculate-templates-2.2.18-r2 (15 Jul 2011)

  15 Jul 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-templates-2.2.18-r2.ebuild,
  +files/calculate-templates-2.2.18-to_2.2.19_rc2.patch:
  Update to rc2

*calculate-templates-2.2.18-r1 (14 Jul 2011)

  14 Jul 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  +calculate-templates-2.2.18-r1.ebuild,
  +files/calculate-templates-2.2.18-fix_corrupting_calculateenv.patch:
  Update for bugfix

*calculate-templates-2.2.18 (29 Jun 2011)

  29 Jun 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
  -calculate-templates-2.2.15.ebuild, -calculate-templates-2.2.15-r1.ebuild,
  -files/calculate-templates-2.2.15-ntfs_mount.patch,
  -calculate-templates-2.2.16.ebuild, -calculate-templates-2.2.16-r1.ebuild,
  -calculate-templates-2.2.16-r2.ebuild, -calculate-templates-2.2.16-r3.ebuild,
  -calculate-templates-2.2.16-r4.ebuild, -calculate-templates-2.2.16-r5.ebuild,
  -calculate-templates-2.2.16-r6.ebuild,
  -files/calculate-templates-2.2.16-clean_dev.patch,
  -files/calculate-templates-2.2.16-fix_update_grub2.patch,
  -files/calculate-templates-2.2.16-fix_variable_bug.patch,
  -files/calculate-templates-2.2.16-many_fix.patch,
  -files/calculate-templates-2.2.16-udev_runlevel.patch,