@@ -1,7 +1,7 @@
 AUX calculate-templates-2.2.18-fix_corrupting_calculateenv.patch 628 RMD160 494cf84e27c85b9a51c41089de70b73cc1da714f SHA1 db81ba9bd4922d2b02dda0ed17adcd0f762b9b70 SHA256 e0fe5f803f77e476742dd0ac3d208fa63835e690774538a0deb79e84ff9b3686
 AUX calculate-templates-2.2.18-to_2.2.19_rc2.patch 5487 RMD160 b7bcd0c83dcb31b3b09ada14f94d459ae06a0dba SHA1 ce93a9002fb8a6d1539b84e34eb48e556e8f3150 SHA256 7cf15d3cb3c98a590b5c0ab758d56a1a7349e4f22c191dc90059693bd9cba74d
 AUX calculate-templates-2.2.19_2.2.20_rc1.patch 6841 RMD160 d87c07ee644363d4e2f5c5208393b5bc9fe83785 SHA1 98c98d513a1dabb0f2201ba4bacf8b9e2dd79525 SHA256 6717e3cde76931806ce06224b10bd05c5b9b5ceba216e519d1b6ffca92e15784
-AUX calculate-templates-2.2.19_scandelay.patch 7808 RMD160 63abdd1e55e2fb8b4ae09407205c8bd0f483c85f SHA1 56943fa1d27f9ee7fae80cbc4f76b50c404b62dc SHA256 f4ddae283a2e9068a9d58834464f9132f337c3ab954e48458d8165b546632e05
+AUX calculate-templates-2.2.19_scandelay.patch 8416 RMD160 815420f40999284d111df95945c209381a4a9947 SHA1 68c86862a32332105a8d7df9f3b4a11b90023928 SHA256 63bc8754b196124b9bbcc89ccd945d07eb76191f7b8547bc541cab4e4474b9bf
 DIST calculate-templates-2.2.18.tar.bz2 233661 RMD160 c8e42c3ed8860193286ff8eaeddcd1c75bb1ef0b SHA1 f197621e5777c16aca9b892d30ede172eee50522 SHA256 d3d236c7e0760db3ad9ea79f0fed9d9e5f97d69acabbae3bbc9c9d2e62a50984
 DIST calculate-templates-2.2.19.tar.bz2 233495 RMD160 bd6ec2efa456b838c15664e7779d01cd760cb124 SHA1 c0f79506fb676a8c37efbdff4a0514a3a8ddb29e SHA256 f5124a64393a3c6d4a03bd3c0065cc7f5a3586f6d5de5362d1b373048b2303ab
 EBUILD calculate-templates-2.2.18-r1.ebuild 726 RMD160 304648d6a89e09efc0d061bb4be7db19d564d8a4 SHA1 ca21af5b2a2e8eac31ff229044ac46a24fd21c40 SHA256 205eda568dfcef50964a9b86ad3699f2b3d3a197eb2f54d6e4d7c7bbb7173d22
@@ -9,7 +9,8 @@ EBUILD calculate-templates-2.2.18-r2.ebuild 725 RMD160 6ec963874d8a33e1189375af8
 EBUILD calculate-templates-2.2.18.ebuild 581 RMD160 7069b5e31c10ade1bc04c3e1f4ff769ae0f80712 SHA1 d024d43f3c1496321bab619518c300d69385952c SHA256 c30ceff00fc644d3e968050f1cd7ceeffcf916d8d8fc5db723db13b0666ab500
 EBUILD calculate-templates-2.2.19-r1.ebuild 722 RMD160 c550a2a328f8de550fd223e56d13c87ae02b9467 SHA1 2dd35d809bf516075bf214a00b661543f03ae808 SHA256 297b5bb37d1ae23ec5c181022aae17f262e314dfcba91aa2e2e34ad0e408aa9d
 EBUILD calculate-templates-2.2.19-r2.ebuild 800 RMD160 e6770740189a5052d22898ba483bc8a2357b0e7d SHA1 d9a0653933ace2c31df5addf762eab7078114e05 SHA256 7043b94f563eb8ec9cfe47a214cc3444924d9a9dc9e665a3aba59c7d208c5460
+EBUILD calculate-templates-2.2.19-r3.ebuild 800 RMD160 e6770740189a5052d22898ba483bc8a2357b0e7d SHA1 d9a0653933ace2c31df5addf762eab7078114e05 SHA256 7043b94f563eb8ec9cfe47a214cc3444924d9a9dc9e665a3aba59c7d208c5460
 EBUILD calculate-templates-2.2.19.ebuild 581 RMD160 72bb0867731be7212291c74f1aef675fc8f14c15 SHA1 581758b376e2864efc7848c5e6b2a1e5b5ee5de7 SHA256 767fdc5cfc8d738c5068b98f2fb48ef3a9781e56681d00c4b05f49e9e693c68b
 EBUILD calculate-templates-2.2.9999.ebuild 572 RMD160 14e53f7c05efbb563b793b1025669cbe79d0838c SHA1 226d287ce0a00609ed6c871321abf5000565227e SHA256 5df16332077472571e2d4aae47e958d1e6efe3a8d694b61053778f75a537142f
-MISC ChangeLog 27097 RMD160 29afc70bf3d6821db6d6508bcadf06d5205be737 SHA1 b66b1a25378fe19e7d5a4102627e2f3d3f7cec2a SHA256 f36e942510bd15ab2cad8ac4bcfe32a23414a164df66de7cacb0e096ba4bf992
+MISC ChangeLog 27316 RMD160 a8441d33b9fd75a8c9a10f2f5a4394b5af8fd913 SHA1 0dae91a6051f06fc4c665ae4f9c459be2ad6aded SHA256 1c32190f7d95f1412c2129bd4ec85ba000f7f3d50baac13cf23ea1a60d87afea
 MISC metadata.xml 338 RMD160 4a1a51881bdf09b961217d2056114ca4ccb8b4d2 SHA1 5fcb2724427f9ac5dda07abb5c829c24e6db9ae6 SHA256 175d9ae86b71b291a519414e816b05290d0e4be74726cc8d5449a500c51a3b2d
