@@ -6,6 +6,7 @@ EBUILD calculate-utilities-2.2.18.ebuild 829 RMD160 e73b8763bd13098473327959bc43
 EBUILD calculate-utilities-2.2.19-r1.ebuild 880 RMD160 34b0400709429affb5e0eff5080c9b2a4c7ac597 SHA1 e6e96c29b30f0d0886587b3b314f3963cf7d77ce SHA256 349da99b0bb6ebb1237e735f228660974146cb8cc21a34b8eba44cc3056976a1
 EBUILD calculate-utilities-2.2.19-r2.ebuild 880 RMD160 c1324e3b0b801b2ca9b766905fd652ae78159977 SHA1 55c675eb6c921bed4b4a49edf45fcb3f0946ad10 SHA256 d420f0e39ddd493e44ae5b872480a7e4cebfa5d85fe40a37fc15999bac21076b
 EBUILD calculate-utilities-2.2.19-r3.ebuild 880 RMD160 263f3de7fbf855f7a95233fcf371835d15d0784c SHA1 10c17209fd42a9cca2f3ddc372c143b8a1c4ff47 SHA256 2e460bdce8630e606fa3982cda9a48591afa4ca0478c9b67a5199884a751a7e3
+EBUILD calculate-utilities-2.2.19-r4.ebuild 880 RMD160 83485c42c30986ffef19cb80a1eff0be4cbbb88e SHA1 956b0083676c70e9b148d86efef0ca66d391cfc9 SHA256 96f15b3a44799a2634234ac467178d5749f2c5e2bf711f997cc56f3f8477955d
 EBUILD calculate-utilities-2.2.19.ebuild 862 RMD160 3c63622728c5486252332890f946fb29bc5af5ca SHA1 1d923fbbb9959dbfed1fbe3f08e530e2e365d940 SHA256 881356df9ab4e47bff03ca9eed44656b38702b1f60055c4b1c446ba49e7f4040
 EBUILD calculate-utilities-2.2.9999.ebuild 840 RMD160 0c7324a9ed480118ac19f62b162c9ee62c25f964 SHA1 7dadab1430ed147334ed7e9b4fcc86dc99e25d56 SHA256 f3ee28f9f765e7302c83eb4a15a09bdf066f09e6b40e34f6d52157a946df5e66
 MISC ChangeLog 16386 RMD160 a1bc730151617e59591147371e7cef867f1ebe8c SHA1 ed905b400219bfa3298e88f7fec9622803bb2163 SHA256 43330d065b983e546cff4d6dbf34846a273d4cec71ad93ddd2d3fecf6d865230
