@@ -2,6 +2,13 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*calculate-templates-2.2.19-r3 (22 Jul 2011)
+
+  22 Jul 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
+  +calculate-templates-2.2.19-r3.ebuild,
+  files/calculate-templates-2.2.19_scandelay.patch:
+  Update templates
+
 *calculate-templates-2.2.19-r2 (22 Jul 2011)
 
   22 Jul 2011; Mike Hiretsky (mhiretskiy) <mh@calculate.ru>
